--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,7 @@ header .logo {
 
 .section-1 {
     display: flex;
+    margin-top: 100px;
 }
 
 .action-title h2 {
@@ -44,7 +45,58 @@ header .logo {
     color: var(--color-font);
 }
 
+.button {
+    background-color: var(--color-button);
+    display: inline-block;
+    padding: 15px 70px;
+    border-radius: 50px;
+    color: var(--color-font);
+    font-size: 20px;
+    text-transform: uppercase;
+    font-weight: bold;
+    text-decoration: none;
+}
+
 .ebook img {
     width: 230px;
     height: auto;
+    margin-right: 50px;
+}
+
+.section-2 {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    margin-bottom: 50px;
+    margin-top: 180px;
+}
+
+.section-2 h2 {
+    color: var(--color-font);
+    text-transform: uppercase;
+    text-align: center;
+}
+
+.cards {
+    display: flex;
+    align-items: center;
+    margin-top: 50px;
+    justify-content: space-around;
+}
+
+.card {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: var(--color-card);
+    width: 200px;
+    height: 200px;
+    border-radius: 10px;
+    color: var(--color-font);
+}
+
+.card img {
+    width: 65px;
+    width: 65px;
 }
